syntax = "proto3";

package analytics;

service AnalyticsService {
  rpc TrackEvent(TrackEventRequest) returns (TrackEventResponse);
  rpc GetUserAnalytics(GetUserAnalyticsRequest) returns (UserAnalyticsResponse);
  rpc GetPostAnalytics(GetPostAnalyticsRequest) returns (PostAnalyticsResponse);
  rpc GetTrendingPosts(GetTrendingPostsRequest) returns (GetTrendingPostsResponse);
  rpc GenerateRecommendations(GenerateRecommendationsRequest) returns (GenerateRecommendationsResponse);
}

message TrackEventRequest {
  string event_type = 1;
  string user_id = 2;
  string data = 3; // JSON string
}

message TrackEventResponse {
  bool success = 1;
  string message = 2;
}

message GetUserAnalyticsRequest {
  string user_id = 1;
  string start_date = 2;
  string end_date = 3;
}

message UserAnalyticsResponse {
  string user_id = 1;
  int32 total_posts = 2;
  int32 total_likes = 3;
  int32 total_comments = 4;
  int32 total_followers = 5;
  int32 total_following = 6;
  repeated EngagementMetric engagement = 7;
}

message EngagementMetric {
  string date = 1;
  int32 value = 2;
}

message GetPostAnalyticsRequest {
  string post_id = 1;
}

message PostAnalyticsResponse {
  string post_id = 1;
  int32 views = 2;
  int32 likes = 3;
  int32 comments = 4;
  int32 shares = 5;
  double engagement_rate = 6;
}

message GetTrendingPostsRequest {
  int32 limit = 1;
  string time_period = 2; // "24h", "7d", "30d"
}

message GetTrendingPostsResponse {
  repeated TrendingPost posts = 1;
}

message TrendingPost {
  string post_id = 1;
  int32 engagement_score = 2;
  string trend_direction = 3; // "up", "down", "stable"
}

message GenerateRecommendationsRequest {
  string user_id = 1;
  int32 limit = 2;
}

message GenerateRecommendationsResponse {
  repeated string post_ids = 1;
  repeated string user_ids = 2; // recommended users to follow
}

